--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable name="mainViewModel"
-            type="com.semdelion.presentation.MainViewModel"/>
+            type="com.semdelion.presentation.viewmodels.MainViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.MainFragment">
+        tools:context=".presentation.views.MainFragment">
         <TextView
             android:id="@+id/get_data_textview"
             android:layout_width="0dp"
@@ -30,6 +30,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="Get Data"
+            android:onClick="@{() -> mainViewModel.load()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/get_data_textview" />
@@ -81,6 +82,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:onClick="@{() -> mainViewModel.save()}"
             android:text="Save Data"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
