--- a/app/src/main/res/layout/fragment_news_details.xml
+++ b/app/src/main/res/layout/fragment_news_details.xml
@@ -14,7 +14,8 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/news_details_imageview"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
+            android:minHeight="150dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,8 +27,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:textSize="21sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/news_details_imageview" />
+            app:layout_constraintTop_toBottomOf="@+id/news_details_imageview"
+            tools:text="Title"
+            android:text="@{vm.titleLive}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
