--- a/app/src/main/res/navigation/news.xml
+++ b/app/src/main/res/navigation/news.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/app_nav"
-    app:startDestination="@id/newsFragment">
-
+    android:id="@+id/news"
+    app:startDestination="@+id/newsFragment">
     <fragment
         android:id="@+id/newsFragment"
         android:name="com.semdelion.presentation.views.NewsFragment"
@@ -12,20 +12,6 @@
         tools:layout="@layout/fragment_news" >
         <action
             android:id="@+id/action_newsFragment_to_newsDetailsFragment"
-            app:destination="@id/newsDetailsFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.semdelion.presentation.views.MainFragment"
-        android:label="MainFragment"
-        tools:layout="@layout/fragment_user"/>
-    <fragment
-        android:id="@+id/favoriteNewsFragment"
-        android:name="com.semdelion.presentation.views.FavoriteNewsFragment"
-        android:label="fragment_favorite_news"
-        tools:layout="@layout/fragment_favorite_news" >
-        <action
-            android:id="@+id/action_favoriteNewsFragment_to_newsDetailsFragment"
             app:destination="@id/newsDetailsFragment" />
     </fragment>
     <fragment
