--- a/app/src/main/res/layout/fragment_favorite_news.xml
+++ b/app/src/main/res/layout/fragment_favorite_news.xml
@@ -2,10 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="vm"
-            type="com.semdelion.presentation.viewmodels.FavoriteNewsViewModel"/>
+
+        <variable
+            name="vm"
+            type="com.semdelion.presentation.viewmodels.FavoriteNewsViewModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/newsConstraint"
         android:layout_width="match_parent"
@@ -15,8 +19,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="26sp"
             android:text="favorite news"
+            android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
