--- a/app/src/main/res/navigation/users.xml
+++ b/app/src/main/res/navigation/users.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/users"
@@ -8,6 +7,6 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.semdelion.presentation.views.MainFragment"
-        android:label="MainFragment"
-        tools:layout="@layout/fragment_user"/>
+        android:label="@string/toolbar_title_users"
+        tools:layout="@layout/fragment_user" />
 </navigation>
