--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -2,15 +2,20 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="mainViewModel"
-            type="com.semdelion.presentation.viewmodels.MainViewModel"/>
+
+        <variable
+            name="mainViewModel"
+            type="com.semdelion.presentation.viewmodels.MainViewModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.views.MainFragment">
+
         <TextView
             android:id="@+id/get_data_textview"
             android:layout_width="0dp"
@@ -22,6 +27,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <Button
             android:id="@+id/get_data_button"
             android:layout_width="0dp"
@@ -29,11 +35,12 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Get Data"
             android:onClick="@{() -> mainViewModel.load()}"
+            android:text="Get Data"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/get_data_textview" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/first_name_textInputLayout"
             android:layout_width="0dp"
@@ -51,8 +58,8 @@
                 android:id="@+id/first_name_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@={mainViewModel.firstNameLive}"
-                android:hint="First Name" />
+                android:hint="First Name"
+                android:text="@={mainViewModel.firstNameLive}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -72,9 +79,10 @@
                 android:id="@+id/last_name_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@={mainViewModel.lastNameLive}"
-                android:hint="Last Name" />
+                android:hint="Last Name"
+                android:text="@={mainViewModel.lastNameLive}" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/save_data_button"
             android:layout_width="0dp"
