--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/news"
         android:icon="@drawable/ic_news"
-        android:title="News" />
+        android:title="@string/bottom_nav_tab_news" />
     <item
         android:id="@+id/favorite_news"
         android:icon="@drawable/ic_favorite_news"
-        android:title="Favorite" />
+        android:title="@string/bottom_nav_tab_favorite" />
     <item
         android:id="@+id/users"
         android:icon="@drawable/ic_home"
-        android:title="Users" />
+        android:title="@string/bottom_nav_tab_users" />
 </menu>
