--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_nav_graph"
     app:startDestination="@+id/news">
-    <include app:graph="@navigation/news"/>
-    <include app:graph="@navigation/favorite_news"/>
-    <include app:graph="@navigation/users"/>
+    <include app:graph="@navigation/news" />
+    <include app:graph="@navigation/favorite_news" />
+    <include app:graph="@navigation/users" />
 </navigation>
