--- a/app/src/main/res/navigation/favorite_news.xml
+++ b/app/src/main/res/navigation/favorite_news.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/favorite_news"
@@ -8,8 +7,8 @@
     <fragment
         android:id="@+id/favoriteNewsFragment"
         android:name="com.semdelion.presentation.views.FavoriteNewsFragment"
-        android:label="fragment_favorite_news"
-        tools:layout="@layout/fragment_favorite_news" >
+        android:label="@string/toolbar_title_favorite_news"
+        tools:layout="@layout/fragment_favorite_news">
         <action
             android:id="@+id/action_favoriteNewsFragment_to_newsDetailsFragment"
             app:destination="@id/newsDetailsFragment" />
