--- a/app/src/main/res/navigation/news.xml
+++ b/app/src/main/res/navigation/news.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/news"
@@ -8,8 +7,8 @@
     <fragment
         android:id="@+id/newsFragment"
         android:name="com.semdelion.presentation.views.NewsFragment"
-        android:label="fragment_news"
-        tools:layout="@layout/fragment_news" >
+        android:label="@string/toolbar_title_news"
+        tools:layout="@layout/fragment_news">
         <action
             android:id="@+id/action_newsFragment_to_newsDetailsFragment"
             app:destination="@id/newsDetailsFragment" />
@@ -18,7 +17,7 @@
         android:id="@+id/newsDetailsFragment"
         android:name="com.semdelion.presentation.views.NewsDetailsFragment"
         android:label="fragment_news_details"
-        tools:layout="@layout/fragment_news_details" >
+        tools:layout="@layout/fragment_news_details">
         <argument
             android:name="newsItem"
             app:argType="com.semdelion.presentation.navigation.NewsNavigationArg" />
