add favorite news list

--- a/app/src/main/res/layout/fragment_favorite_news.xml
+++ b/app/src/main/res/layout/fragment_favorite_news.xml
@@ -14,17 +14,18 @@
         android:id="@+id/newsConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.views.FavoriteNewsFragment">
+        tools:context=".presentation.views.NewsFragment">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="favorite news"
-            android:textSize="26sp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/news_recyclerview"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:itemCount="5"
+            tools:listitem="@layout/_template_news_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
