--- a/app/src/main/res/layout/fragment_favorite_news.xml
+++ b/app/src/main/res/layout/fragment_favorite_news.xml
@@ -34,5 +34,15 @@
                 tools:itemCount="5"
                 tools:listitem="@layout/_template_news_item" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        <ProgressBar
+            android:id="@+id/news_loader_progressBar"
+            style="?android:attr/progressBarStyle"
+            android:visibility="visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
