--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -48,6 +48,7 @@
             android:id="@+id/state_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:padding="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +57,6 @@
                 android:id="@+id/state_animation_view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_margin="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -68,15 +68,16 @@
 
             <TextView
                 android:id="@+id/state_textview"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
+                android:gravity="center_horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/animation_image_view"
+                app:layout_constraintTop_toBottomOf="@+id/state_animation_view"
                 app:layout_constraintVertical_bias="0.0"
                 tools:text="No Internet" />
         </androidx.constraintlayout.widget.ConstraintLayout>
